[package]
name = "milkshake-compositor"
version = "0.0.0"
edition = "2021"

[dependencies]
ash = { workspace = true }
bevy = { workspace = true, features = ["bevy_pbr", "bevy_text", "bevy_ui", "bevy_window"] }
bevy-smithay = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# external crates
ash = { version = "0.38", default-features = false }
bevy = { version = "0.15", default-features = false }
smithay = { git = "https://github.com/Smithay/smithay", rev = "f93476cebab3d47f6729354805b3e184f6878ef2", version = "0.4", default-features = false }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "f93476cebab3d47f6729354805b3e184f6878ef2", version = "0.1", default-features = false }
thiserror = "2"
wgpu = { version = "23", default-features = false }

# internal crates
bevy-smithay = { version = "0", path = "crates/bevy-smithay" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 2
